test/arrays/deitz/promotion/test_scalar_promote10.good
test_scalar_promote10.chpl:9: error: illegal access of iterator or promoted expression
